[package]
name = "planet_material"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["file_watcher"] }
bevy_panorbit_camera = "0.19"
bevy_shader_utils = { path = "libs/bevy_shader_utils" }
rand = "0.8.5"
noise = "0.9.0"

[workspace]
members = [
    "libs/bevy_shader_utils",
]
